--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   dio: ^5.8.0+1
+  shared_preferences: ^2.5.2
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
+
 
 
 dev_dependencies:
